--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap");
 :root {
   --light-background: #f9fbff;
   --light-primary: #0087f3;
@@ -18,9 +19,14 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
+  font-family: 'Nunito', sans-serif;
+  font-weight: bolder;
   outline: none;
+  cursor: url("../images/Untitled-2.png"), default;
+}
+
+i {
+  cursor: url("../images/hand-cursor.png"), default;
 }
 
 body {
@@ -112,7 +118,7 @@ body {
   margin: 0 3px;
   font-size: 12px;
   color: #00000000;
-  cursor: pointer;
+  cursor: url("../images/hand-cursor.png"), default;
   -webkit-transition: 0.2s;
   transition: 0.2s;
 }
@@ -137,6 +143,7 @@ body {
   width: 100%;
   height: 60px;
   font-size: 55px;
+  font-weight: 500;
   text-align: right;
   color: var(--dark-font);
   overflow: auto;
@@ -154,18 +161,17 @@ body {
           align-items: flex-end;
   width: 100%;
   font-size: 20px;
+  font-weight: 500;
   text-align: right;
   color: var(--dark-btn-bg-green);
 }
 
 .history {
-  cursor: pointer;
+  cursor: url("../images/hand-cursor.png"), default;
 }
 
 .operation {
-  width: 335px;
-  height: 30px;
-  overflow: auto;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -201,7 +207,7 @@ body {
           align-items: center;
   color: var(--dark-font);
   background: var(--dark-btn-bg-primary);
-  cursor: pointer;
+  cursor: url("../images/hand-cursor.png"), default;
   -webkit-backdrop-filter: blur(20px);
           backdrop-filter: blur(20px);
 }
