--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap');
 
 :root{
   --light-background: #f9fbff;
@@ -18,10 +19,15 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 500;
+  font-family: 'Nunito', sans-serif;
+  font-weight: bolder;
   outline: none;
   // border: 1px solid #ffffff;
+  cursor: url("../images/Untitled-2.png"),default;
+}
+
+i{
+  cursor: url("../images/hand-cursor.png"),default;
 }
 
 body{
@@ -79,7 +85,7 @@ body{
   margin: 0 3px;
   font-size: 12px;
   color: #00000000;
-  cursor: pointer;
+  cursor: url("../images/hand-cursor.png"),default;
   transition: 0.2s;
 }
 
@@ -103,6 +109,7 @@ body{
   width: 100%;
   height: 60px;
   font-size: 55px;
+  font-weight: 500;
   text-align: right;
   color: var(--dark-font);
   overflow: auto;
@@ -114,18 +121,17 @@ body{
   align-items: flex-end;
   width: 100%;
   font-size: 20px;
+  font-weight: 500;
   text-align: right;
   color: var(--dark-btn-bg-green);
 }
 
 .history{
-  cursor: pointer;
+  cursor: url("../images/hand-cursor.png"),default;
 }
 
 .operation{
-  width: 335px;
-  height: 30px;
-  overflow: auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -145,7 +151,7 @@ body{
   align-items: center;
   color: var(--dark-font);
   background: var(--dark-btn-bg-primary);
-  cursor: pointer;
+  cursor: url("../images/hand-cursor.png"),default;
   backdrop-filter: blur(20px);
 }
 
